@@ -11,3 +11,5 @@ extern void destroymain (GtkWidget *widget, gpointer data);
 extern gint keypress (GtkWidget *widget, GdkEventKey *key);
 extern gint keyrelease (GtkWidget *widget, GdkEventKey *key);
 extern void move_current_page_to_window (void);
+extern void show_fields_page (void);
+extern void show_partyline_page (void);
